syntax = "proto3";

package realestate;

import "google/protobuf/empty.proto";

service BackendService {
  rpc GetMatchingSubscribers (EventRequest) returns (stream SubscriberResponse);
}

message EventRequest {
  int64 id = 1;
  string country = 2;
  string city = 3;
  string renovation = 4;
  int32 number_of_rooms = 5;
  int32 area = 6;
  int32 floor = 7;
  int32 price = 8;
  string message = 9;
}

message SubscriberResponse {
  int64 id = 1;
  int32 price = 2;
  int32 number_of_rooms = 3;
  int32 market_price = 4;
  string user_email = 5;
  string sub_city = 6;
  int32 sub_price = 7;
  int32 sub_num_of_rooms = 8;
  string link = 9;
}





